Fix text overflow

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -114,6 +114,13 @@ ul {
     width: 60%;
 }
 
+
+/* overflow */
+p, h1, h2, h3, h4, h5, h6, span, a {
+    max-width: 95%; 
+    overflow: auto; 
+}
+
 /* ################### NAV BAR + FOOTER ################### */
 nav,
 footer {
